Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4885

Symbian/qtwebkit radiobuttons and checkboxes don't have associated style/color

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.0
    • 4.6.0
    • GUI: Look'n'Feel
    • None
    • 15384f3017978a3d552077c8400b018efcfd793c, 75ebdd04f41dd75be1e046a1c54ced0bfb78a0f2

      Rendering radiobuttons and checkboxes will always result to white color, if the page background is also white these elements become invisble.

        1. checkboxes_white.PNG
          95 kB
          Janne Roine
        2. checkboxes_black.PNG
          32 kB
          Janne Roine
        3. checkboxes_black_clicked.PNG
          8 kB
          Janne Roine
        4. checkboxes_white_clicked.PNG
          9 kB
          Janne Roine
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            e0150566 Janne Roine
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes